[build-system]
requires = ["setuptools>=63.2"]
build-backend = "setuptools.build_meta"

[project]
name = "qcontext"
version = "1.0.5"
authors = [
    { name="cxllmerichie", email="cxllmerichie@gmail.com" },
]
maintainers = [
    { name="cxllmerichie", email="cxllmerichie@gmail.com" },
]
description = "One of the most controversial things"
readme = "README.md"
license = { file="LICENSE.txt" }
requires-python = ">=3.10"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
#    "Topic :: Security :: Cryptography",
#    "Topic :: Database :: Front-Ends",
#
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",

    "Natural Language :: English",
#
#    "Development Status :: 4 - Beta",
#
#    "Framework :: FastAPI",
#
    "Intended Audience :: Developers",

    "Operating System :: OS Independent",

    "License :: OSI Approved :: MIT License"
]
dependencies=[
    "PyQt5~=5.15.9",
    "PyQt5-stubs~=5.15.6.0",
    "qasync~=0.24.0",
    "loguru~=0.6.0"

#    "python-dateutil~=2.8.2",
#    "aiohttp~=3.8.4",
#    "ujson~=5.7.0",
#    "aiodns~=3.0.0",
#    "cchardet~=2.1.7",
#    "uvloop~=0.17.0"
]

[tool.setuptools.package-data]
qcontext = [".assets/*"]

[project.urls]
"Homepage" = "https://github.com/cxllmerichie/qcontext"
"Bug Tracker" = "https://github.com/cxllmerichie/qcontext/issues"
"Repository" = "https://github.com/cxllmerichie/qcontext"
"Documentation" = "https://github.com/cxllmerichie/qcontext/README.md"